manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: universal-ledger
  namespace: ulcore-staging
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: universal-ledger
